--- a/VRChat/11/1314611.html
+++ b/VRChat/11/1314611.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "eeBMHmAwXE2xSzgiAHzEZkBjHwX4SrMCBePV9/VVRGk="></script>
+    "KT8j8wgpT9aQgYAnjwhkShxCSkz1+vwhm6bd6Gfw+Kk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【YK's Atelier】エンブレム","description":"かっこかわいいエンブレム（店の看板等）を作りたくて作ってみました。\nnmapなど初めての試みなので、不具合がありましたら、ご連絡ください。\n\n収益化された動画、生放送へ等3Dモデルを使用、装着しての映り込みはOKです。\n\n色の変更は自由にしていただいて構いません。お好きな色にカスタマイズしてください。\n\nエンブレムの中心の猫に関しては、変えていただくことをお勧めします。\nお好きなグループのマーク、エンブレムなんでもOKです。\n\n主にVRChatでの利用を想定しておりますが、他用途での利用も可能です。\n\n▼ポリゴン数　\n　4,842ポリゴン\n\n▼内容物\n　Materialsフォルダ\n\tエンブレム.mat\n\tエンブレム.mat.meta\n\tエンブレム_リボン.mat\n\tエンブレム_リボン.mat.meta\n\tエンブレムマーク.mat\n\tエンブレムマーク.mat.meta\n\n　エンブレム.fbx\n\n　エンブレム_color.psd\n  エンブレム_nmap.png\n\n  エンブレム_None_color.psd\n  エンブレム_None_nmap.png\n\n  エンブレム_リボン_color.psd\n  エンブレム_リボン_nmap.png\n\n  エンブレムマーク.psd（例として猫の画像を入れてありますが、自由に置き換えてください。）\n\n▼マテリアル数\n　合計3つ\n\n禁止事項：再配布、転売、自作発言\n\n作者への連絡先\nTwitter: @yuuki19970920\nDiscord: ykReason#5239","url":"https://booth.pm/ja/items/1314611","offers":{"priceCurrency":"JPY","@type":"Offer","price":"250"},"image":"https://booth.pximg.net/c/620x620/20fcfc8e-a688-49a2-95b4-807f9553d59d/i/1314611/e3b8287c-7650-4fa1-a0df-29a4bf04eaad_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eeBMHmAwXE2xSzgiAHzEZkBjHwX4SrMCBePV9/VVRGk="></script>
+    nonce="KT8j8wgpT9aQgYAnjwhkShxCSkz1+vwhm6bd6Gfw+Kk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -450,9 +450,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
