--- a/VRChat/31/1314131.html
+++ b/VRChat/31/1314131.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "TGTgZ/yPBUlfRYeAlmT1zHSN5x6ysL1u8XsWH3Dc02c="></script>
+    "klFq024F16IzFwdnURQs/YDsNQhQtL9UdC0Yy89Vrqc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【特売品(無料)】バナナ（パーティクル付き）","description":"【特売品！】\n\nバラ売りバナナがまるごと一本！\n\n今ならワールドパーティクルもついてくる！\n\nお買い得バナナ！熟して食べごろ！\n\n今回はFBX！PSD！サイズ調整済みPrefab！\nパーティクルPrefabのセット！\n\nポリゴン数　△352\n\n※一部撮影にはMnmrShader2.0を使用しました。\n\n【アップデート情報】\nバナナの皮の角を追加しました。","url":"https://booth.pm/ja/items/1314131","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b96a0129-aca5-4325-bfe4-0d8a349c5b10/i/1314131/71ae4821-6f9e-4953-96c6-30e1bfc5b4c6_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TGTgZ/yPBUlfRYeAlmT1zHSN5x6ysL1u8XsWH3Dc02c="></script>
+    nonce="klFq024F16IzFwdnURQs/YDsNQhQtL9UdC0Yy89Vrqc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -557,9 +557,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
