--- a/VRChat/38/1313938.html
+++ b/VRChat/38/1313938.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "R/Q4g7UeTFBhjZWxp6J/D9GTHBBcr5pLnwoEQv0fGFk="></script>
+    "7fQUTwCEKAQdK28fjefRx41oZr5aXL6QMA5ZRO03kzo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"深緑の大剣","description":"VRC向けの武器となります\n\nクトゥルフ神話に登場する邪神の一体\nシアエガをイメージした大剣です\n\n\n■ポリゴン数【7534】\n\n【利用規約】\n\n■改変・商用利用・私的利用可\n\n■禁止事項：再配布、自作発言を禁止します","url":"https://booth.pm/ja/items/1313938","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/87f470db-be75-4a7d-bf09-8de00a4cf91c/i/1313938/535ec872-269c-4af0-b780-2676254dd30e_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="R/Q4g7UeTFBhjZWxp6J/D9GTHBBcr5pLnwoEQv0fGFk="></script>
+    nonce="7fQUTwCEKAQdK28fjefRx41oZr5aXL6QMA5ZRO03kzo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -371,9 +371,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
