--- a/VRChat/39/1313939.html
+++ b/VRChat/39/1313939.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "d4WtprLVfx5fXxuuF+kW/JIB+Nl6P3SRmZkA6HS3ozk="></script>
+    "PaU5ZHo50LReeWuRw1rd1Z6ooGLV8GDD81elEDMgHAc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ラバーカップ/toilet plunger","description":"ラバーカップ 1500くらいポリゴン\n内蔵\n.fbx/prefab/diffuse/normal/gloss/matcap/specular\nmatcap made and copyrighted by Yueou(https://yueou.booth.pm/)\n二次配布、自作発言、商用利用はお止めください\n改変自由 R18/G使用可能\nvrchat使用限\n不明な点や質問などありましたらこちらに連絡ください\nI PRESERVE AUTHOURITY.（According to Copyright Law of the People's Republic of China）","url":"https://booth.pm/ja/items/1313939","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/753c946e-b3d0-4d99-ad93-71a37cc147a2/i/1313939/55c92ae3-fc7d-4fc4-8f37-fb54de6df761_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="d4WtprLVfx5fXxuuF+kW/JIB+Nl6P3SRmZkA6HS3ozk="></script>
+    nonce="PaU5ZHo50LReeWuRw1rd1Z6ooGLV8GDD81elEDMgHAc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -447,9 +447,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
