--- a/VRChat/22/1313822.html
+++ b/VRChat/22/1313822.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "3erj0Y0999UNQqZyMIRjx/QuBpS+Eh60fSpqVq1eQzw="></script>
+    "/ti23hx6cZ9usfqoXUZ51XWOgEFVf1vDxJJJBsHXbbk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け3Dモデル】アームブレード","description":"少々の厨二心を詰め込んだ変形武器です。\n\nポリゴン数：8968\n\n\n[内容物]\n・unitypackage（マテリアル・アニメーション設定済みデータ）\n・FBXモデル\n・テクスチャ\n・readme(利用規約) \n\n下に利用規約が記載されていますので、ご了承の上での購入をお願いします。\n\n[利用規約]\n\n規約制定者　doo\n制定日　2019/04/12\n\n～禁止事項～\n・同封しているデータの再配布・販売\n・データを使用する権利自体の配布\n・特定個人や団体への中傷を目的とした利用\n\n～可能事項～\n・本モデルに関連するテクスチャなどのデータの改変\n・動画配信などの営利活動\n\n～著作権～\n・本モデルの個人的利用範囲での流用は自由ですが、\n　この配布データ及び改変したデータが持つ著作権は doo に帰属するものとします。\n\n禁止されていること以外で使用していいかわからない場合でも、 \ndoo に不利益をかけないものであれば大丈夫です。\n質問などありましたら TwitterID：@Doo72348845R までお尋ねください。\n\ndoo は、本モデルを使用したことによる\n金銭・機器・機会的トラブルの損失を一切負わないものとします。\n\n※この利用規約は予告なく変更される場合があります。ご了承ください。","url":"https://booth.pm/ja/items/1313822","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/2f99e6a5-825d-4d36-b20e-398413d0f73f/i/1313822/86da8db4-3d2e-4e98-bbdf-41f9a77c8d98_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3erj0Y0999UNQqZyMIRjx/QuBpS+Eh60fSpqVq1eQzw="></script>
+    nonce="/ti23hx6cZ9usfqoXUZ51XWOgEFVf1vDxJJJBsHXbbk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -417,9 +417,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
