--- a/VRChat/67/1313167.html
+++ b/VRChat/67/1313167.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "PazqxfRTrH70SSN3MiDUIg4NXUy5IbD3MsfDU46ZOuM="></script>
+    "Au/PeXjwycagX4UA1pU1hz6xUt3DTPWfAY55ELH8hh8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボディピアス　15種類","description":"それっぽいボディピアスです。\nトンネル(011.fbx)は輪っかにボーンが入ってるのでDynamicBoneで揺らせます。\nシェイプキーで長さや幅が変えられるものもあります。\n\nスクランパー(牙が生えているように見えるピアス)は、アバターのHeadボーンにピアスを入れればなんとなくできるとは思いますが、アバターによっては(口の開け方が大きいなど)blenderでの調整やunityでのanimation変更が必要になる可能性があります。ご注意ください。\n\n※ピアス以外(アバター等)は付属しません。\n\nユニティちゃんトゥーンシェーダー(UTS)2.0.7を使用しています。\n当商品をunityへインポートする前にUTSを先にインポートしてください。\nhttps://unity-chan.com/download/releaseNote.php?id=UTS2_0\n\n何かあればTwitter：@enu_001まで。\nTwitterやVRC内で見せてもらえたら嬉しいです。","url":"https://booth.pm/ja/items/1313167","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/f1f78588-f08f-4c20-b467-d3056dc93c29/i/1313167/cdcc0e94-a62b-41c8-bad4-6d81c85fb276_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PazqxfRTrH70SSN3MiDUIg4NXUy5IbD3MsfDU46ZOuM="></script>
+    nonce="Au/PeXjwycagX4UA1pU1hz6xUt3DTPWfAY55ELH8hh8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -481,9 +481,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
