--- a/VRChat/67/1313067.html
+++ b/VRChat/67/1313067.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "2GkmHtbW9I9tm8HtA3vVJu8/aPfRb1/nZhVeJ71SUp8="></script>
+    "afeFs6PubCr9J9IC7GPTZ69cqZqCANcjGEEwfRloylU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"UploadPlatformChecker","description":"SceneViewの左上に選択中のBuild Platformを表示したり、切り替えたりできるUnityエディタ拡張です。\nVRChatでOculusQuest用にアバターやワールドをアップロードする際に使用することを想定しています。","url":"https://booth.pm/ja/items/1313067","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1313067/18355e20-5526-4211-a4c7-dae35215249a_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2GkmHtbW9I9tm8HtA3vVJu8/aPfRb1/nZhVeJ71SUp8="></script>
+    nonce="afeFs6PubCr9J9IC7GPTZ69cqZqCANcjGEEwfRloylU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -421,9 +421,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
