--- a/VRChat/60/1312660.html
+++ b/VRChat/60/1312660.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "pRvXmnJEkoyLdpYU41LASGdLr92dTIzzozIMVkATiqo="></script>
+    "w/L5fFEkE0pc1fPqXuaWZpz37C8RJ8bk4HPBElQ0xec="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【ふがし横丁】ブラックホールみたいな色の瞳テクスチャ","description":"【ふがし横丁】ブラックホールみたいな色の瞳テクスチャ\n制作：ふがふがし","url":"https://booth.pm/ja/items/1312660","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/e0aa0d58-e4fd-4164-b802-138d2b57c3e0/i/1312660/cd15eecb-5775-43c4-a535-d504e048790c_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pRvXmnJEkoyLdpYU41LASGdLr92dTIzzozIMVkATiqo="></script>
+    nonce="w/L5fFEkE0pc1fPqXuaWZpz37C8RJ8bk4HPBElQ0xec="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -473,9 +473,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
